--- a/curriculumvitae.tex
+++ b/curriculumvitae.tex
@@ -22,10 +22,10 @@
 
 % PAGE STYLE: myCV
 \makepagestyle{myCV}
-\makeevenfoot{myCV}{}{\so{Weldam, 6 - 5655JG, Eindhoven, the Netherlands}\\     % Define Verso footer
+\makeevenfoot{myCV}{}{\so{Schootsestraat 99B - 5616RC, Eindhoven, the Netherlands}\\     % Define Verso footer
     \so{ {\Large\Letter} eirvandelden@me.com \ {\Large\Telefon} +31 (0)6 18 24 38 12}
     }{}
-\makeoddfoot{myCV}{}{\so{Weldam, 6 - 5655JG, Eindhoven, the Netherlands}\\      % Define Recto footer
+\makeoddfoot{myCV}{}{\so{Schootsestraat 99B - 5616RC, Eindhoven, the Netherlands}\\      % Define Recto footer
     \so{ {\Large\Letter} eirvandelden@me.com \ {\Large\Telefon} +31 (0)6 18 24 38 12}
     }{}
 
@@ -52,47 +52,51 @@
     % EXPERIENCES
     \heading{E}{XPERIENCES}
         \begin{tabularx}{0.97\linewidth}{>{\raggedleft\scshape}p{2.5cm}X}
+            \gray Period    & \textbf{November 2012 --- current}\\
+            \gray Employer  & \textbf{i-level services} \hfill Riethoven, the Netherlands\\
+            \gray Job Title & \textbf{Software Developer}\\
+                            & Our customers want custom software solutions for their specific problems. My responsibilities range from writing the User Requirements, designing the software architecture and developing the User Interface and User Experience. Software products range from CRM-, cash registry-, to custom backend systems or iPad apps. \\
+            \gray Period    & \textbf{August 2012 --- October 2012}\\
+            \gray Employer  & \textbf{Municipality Boxtel via OGD}  \hfill Boxtel, the Netherlands\\
+            \gray Job Title & \textbf{First line}\\
+                            & As first line help, I took calls from other employees of the municipality and assisted them in solving any ICT related problems. \\
             \gray Period    & \textbf{August 2011 --- January 2012}\\
             \gray Employer  & \textbf{Sorama} \hfill Eindhoven, The Netherlands\\
             \gray Job Title & \textbf{Project Member}\\ %TODO: Replace by something more fitting
-                            & In this internship we created a web portal (client, server and services) that allowed the user to control Sorama's Sound Scanner and analyse and visualise the result.\\
+                            & In this internship we created a web portal (client, server and services) that allowed the user to control Sorama's sound scanner and analyse and visualise the result.\\
             \gray Period    & \textbf{September 2008 --- September 2009}\\
             \gray Employer  & \textbf{J.C.E.S. Kinjin} \hfill Eindhoven, The Netherlands\\
             \gray Job Title & \textbf{Chairman}\\
-                            & As chairman of a board of six students, we organised traditional and modern Japanese activities for our like minded members\\
+                            & As chairman of a board with five other students, we organised traditional and modern Japanese activities for our like minded members\\
         \gray Period        & \textbf{July 2004 --- December 2006}\\
         \gray Employer      & \textbf{Apple Centre YouMac} \hfill Eindhoven, The Netherlands\\
         \gray Job Title     & \textbf{Salesman}\\
-                            & Advise customers on the advantages and capabilities of Apple products; offer small repairs and on the spot service. I also set up, and was trainer, of the ``Maak kennis met de Mac'' workshop.\\
+                            & Advise customers on the advantages and capabilities of Apple products; offer small repairs and on the spot service. I also set up, and was trainer, of the ``Maak kennis met de Mac'' introduction workshop.\\
         \gray Period        & \textbf{Augustus 2004 --- June 2006}\\
         \gray Employer      & \textbf{Het Augustinianum} \hfill Eindhoven, The Netherlands\\
         \gray Job Title     & \textbf{Theatrical Engineer}\\
                             & My high school `Augustinianum' uses real, authentic, theatrical equipment for their plays, and I designed, connected and controlled both light and sound experience.\\
-
-
         \end{tabularx}
 
 
     \heading{S}{KILLS}
 %        \newcommand{\gray}{\rowcolor[gray]{.90}}
         \begin{tabularx}{0.97\linewidth}{>{\raggedleft\scshape}p{2.5cm}X}
-         \gray Computer \mbox{Languages} & C\#, Python, Objective-C, \LaTeX, Haskell, (Object) Pascal\\
-         Technologies & Silverlight 4, XNA 4.0, MySQL/SQLite3, Cocoa, MVVM \\
-         \gray Operating Systems & Mac OS X $9.2.2-10.8$, Mac OS X Server $10.5-10.7$, iOS $2.0 - 5.1$, Windows 2000/XP/Vista/7, Various Linux distributions \\
+         \gray Computer \mbox{Languages} & C\#, Ruby, Python, Objective-C, \LaTeX, Haskell (both OO as functional where applicable)\\
+         Technologies & Ruby on Rails 3/4, .Net 3.5/4.0, ASP.Net WebForms, ASP.Net MVC, Silverlight 4, XNA 4.0, MySQL/SQLite3, Cocoa, MVVM \\
+         \gray Operating Systems & Mac OS X $9.2.2-10.9$, Mac OS X Server $10.5-10.7$, iOS $2.0 - 7.0$, Windows 2000/XP/Vista/7/8, Various Linux distributions \\
 
         \end{tabularx}
-
-    
+\newpage
     \heading{E}{DUCATION}        
     \begin{tabularx}{0.97\linewidth}{>{\raggedleft\scshape}p{2.5cm}X}
         2006-present & \textbf{University of Technology Eindhoven} \\[.5ex]
-        & {\small Studying the bachelor study `Computer Science and Engineering', with a minor in `Human Technology Interaction.' Planning to do a master in `Human Technology Interaction'}\\
+        & {\small Studying the bachelor study `Computer Science and Engineering', with a minor in `Human Technology Interaction.' Planning to do the master `Human Technology Interaction' in the future} \\
         & \emph{Notable courses} Software Specification, Software Testing, Algorithms, Computer Networks, Databases, Human Perception \& Performance \\[2ex]
         2000-2006   & \textbf{Augustininum} \\
         & {\small Graduated on `VWO' level in the profiles `Natuur\&Techniek' and `Natuur\&Gezondheid'}\\
     \end{tabularx}
     
-    \newpage
     \heading{P}{UBLICATIONS}
     \begin{tabularx}{0.97\linewidth}{>{\raggedleft\scshape}p{2.5cm}X}
           April 2011 & \emph{``Emotional Adaptive Gaming: Gaming Profiles''} \\[.5ex]
@@ -102,9 +106,7 @@
     \section{{\fontsize{18}{\lineskip}\textbf{P}}{\fontsize{12}{\lineskip}\textbf{ERSONAL}} {\fontsize{18}{\lineskip}\textbf{I}}{\fontsize{12}{\lineskip}\textbf{NFO}}}
     \begin{tabularx}{0.97\linewidth}{>{\raggedleft\scshape}p{2.5cm}X}
            & Born in Eindhoven, the Netherlands on the 29th of Febuary, 1988.\\
-           & Present citizenship: Nederlandse\\
-           & Martial status: single
-           
+           & Present citizenship: Nederlandse
     \end{tabularx}
     
     
@@ -116,7 +118,7 @@
     
     \heading{I}{NTERESTS}
     \begin{tabularx}{0.97\linewidth}{>{\raggedleft\scshape}p{2.5cm}X}
-          & Ballroom and Latin dancing (international competitions), Wushu Kung Fu (international competitions), music, reading, software technologies, gadgets, human factors, presenting,≤ typesetting with \LaTeX\footnote{this curriculum was created with \LaTeX}
+          & Ballroom and Latin dancing (international competitions), Wushu Kung Fu (international competitions), music, reading, software technologies, gadgets, human factors, presenting,≤ typesetting with \LaTeX\footnote{this curriculum vitae was created with \LaTeX}
     \end{tabularx}
     
 
